--- a/introduction.tex
+++ b/introduction.tex
@@ -16,9 +16,9 @@ In this introduction I first introduce what I mean exactly with case competition
 
 % First, case marks the grammatical role of the noun phrases. Case also appears on relative pronoun. Case on head can differ from case on relative pronoun. What happens if there is no noun? Two cases come together on the relative pronoun. What holds for all languages: there is a fixed order of who wins the competition. Specific from language to language: when does the competition take place?
 
-Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:german-case}. The what can descriptively be called subject of the predicate \tit{mag} `likes' is marked as nominative. The what can be described as object of \tit{mag} `likes' is marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
-In \ref{ex:german-case-1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is a descriptive object of \tit{mag} `likes'.
-In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' appears in accusative case, because it is the descriptive object of \tit{mag} `likes'.
+Languages can use case to mark the grammatical role of a noun phrase in a clause \citep[cf.][]{moravcsik2009}. Consider the two Modern German sentences in \ref{ex:german-case}. What can descriptively be called subject of the predicate \tit{mögen} `to like' is marked as nominative. What can be described as object of \tit{mögen} `to like' is marked as accusative. The case marking of the noun phrases is reflected on the determiner in the noun phrase.
+In \ref{ex:german-case-1}, \tit{der} in \tit{der Lehrer} `the teacher' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Schüler} `the pupil' appears in accusative case, because it is a descriptive object of \tit{mögen} `to like'.
+In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit{der Schüler} `the pupil' appears in nominative case, because it is the descriptive subject in the clause. \tit{Den} in \tit{den Lehrer} `the teacher' appears in accusative case, because it is the descriptive object of \tit{mögen} `to like'.
 
 \ex.\label{ex:german-case}
 \ag. Der Lehrer mag den Schüler.\\
@@ -29,9 +29,9 @@ In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit
  `The pupil likes the teacher.'\label{ex:german-case-2}
 
 Not only full noun phrases, but also other elements can be marked for case, such as relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:german-relatives}. These two sentences both contain a main clause that is modified by a relative clause.
-In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Schüler} `pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the descriptive object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{der} `\ac{rel}.\ac{nom}.\ac{sg}.\ac{m}' appears in nominative case, because it is the descriptive subject of in the relative clause.
+In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Schüler} `pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the descriptive object of \tit{mögen} `to like' in the main clause. The relative pronoun \tit{der} `\ac{rel}.\ac{nom}.\ac{sg}.\ac{m}' appears in nominative case, because it is the descriptive subject of \tit{mögen} `to like' in the relative clause.
 
-In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the descriptive object of \tit{mag} `likes' in the main clause. The relative pronoun \tit{den} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{m}' appears in accusative case, because it is the descriptive object of \tit{sucht} `searches' in the relative clause.
+In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the descriptive object of \tit{mögen} `to like' in the main clause. The relative pronoun \tit{den} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{m}' appears in accusative case, because it is the descriptive object of \tit{suchen} `to search' in the relative clause.
 
 \ex.\label{ex:german-relatives}
 \ag. Der Lehrer mag den Schüler, der nach draußen guckt.\\
@@ -55,6 +55,7 @@ The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{m}' appears in accusat
 The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Therefore, I refer to the relative pronoun as \tit{þan(a)}.
 }
 
+%put glosses here
 \exg. gaarma þan -ei arma\\
  pity\scsub{[acc]} \ac{rel}.\ac{acc}.\ac{sg}.\ac{m} -\ac{comp} pity\scsub{[acc]}\\
  `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc}
@@ -71,39 +72,35 @@ Later on I will argue that this indirect process is ellipsis.
 }
 This means that the internal and external case come together on the relative pronoun. In other words, there is case competition going on in headless relatives. \ref{ex:gothic-acc-acc} is indeed the first example I gave of case competition in a headless relative. It is an uninteresting one, because the two competing cases are identical.
 
-Consider the example in \ref{ex:gothic-acc-dat}, in which the internal case is dative and the external case is accusative.
-The internal case is dative. The preposition \tit{ana} `on' takes dative objects, as indicated by the subscript on the preposition.
-The external case is accusative. The predicate \tit{ushafjands} `picking up' takes accusative objects, indicated by the subscript on the predicate.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{n}' appears in dative. This dative can only come from the preposition \tit{ana} `on', which is the internal case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
+Consider the example in \ref{ex:gothic-acc-nom}, in which the internal case is accusative and the external case is nominative.
+The internal case is accusative. The predicate \tit{frijon} `to love' takes accusative objects, as indicated by the subscript on the predicate.
+The external case is accusative. The predicate \tit{wisan} `to be' takes nominative subjects, indicated by the subscript on the predicate.
+The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{m}' appears in accusative. This accusative can only come from the predicate \tit{frijon} `to love', which is the internal case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
-\exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
- {picking up}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{n} -\ac{comp} lay\\
- `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat}
+\exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
+ \ac{rel}.\ac{acc}.\ac{sg}.\ac{m} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+ `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom}
 
-The conclusion that follows is that the relative pronoun can take the internal case. At this point it remains unclear what happened to the external accusative case.
+The conclusion that follows is that the relative pronoun can take the internal case. At this point it remains unclear what happened to the external nominative case.
 
-Now consider the example in \ref{ex:gothic-dat-acc}, in which the internal case is accusative and the external case is dative.
-The internal case is accusative. The predicate \tit{jains} `sent' takes accusative objects, as indicated by the subscript on the predicate.
-The external case is dative. The predicate \tit{galaubjaiþ} `believe' takes dative objects, as indicated by the subscript on the predicate.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the dative case. This dative can only come from the predicate \tit{taujau} `do', which is the external case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
+Now consider the example in \ref{ex:gothic-nom-acc}, in which the internal case is nominative and the external case is accusative.
+The internal case is nominative. The predicate \tit{wisan} `to be' takes nominative subjects, as indicated by the subscript on the predicate.
+The external case is accusative. The predicate \tit{ussiggwan} `to read' takes accusative objects, as indicated by the subscript on the predicate.
+The relative pronoun \tit{þo} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{n}' appears in the accusative case. This accusative can only come from the predicate \tit{ussiggwan} `to read', which is the external case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
-\exg. ei galaubjaiþ þamm \tbf{-ei} \tbf{insandida} \tbf{jains}\\
-that believe\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} \ac{comp} {sent}\scsub{[acc]} he\\
-`that you believe on (him) whom he has sent' \flushfill{Gothic, \ac{john} 6:29, my translation}\label{ex:gothic-dat-acc}
+\exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
+ and \ac{rel}.\ac{acc}.\ac{sg}.\ac{n} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea you.\ac{pl} read.?.\scsub{[acc]}\\
+ `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
 
-% \exg. hva nu wileiþ ei taujau þamm \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
-%  what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{m} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
-%  `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc}
+The conclusion that follows is that the relative pronoun can take the external case. At this point it remains unclear what happened to the internal nominative case.
 
-The conclusion that follows is that the relative pronoun can take the external case. At this point it remains unclear what happened to the internal accusative case.
-
-The examples in \ref{ex:gothic-acc-dat} and \ref{ex:gothic-dat-acc} have shown that the relative pronoun in headless relatives can take either the internal or the external case. In the examples, the predicates (or preposition) take accusative and dative, and in both cases, the relative pronoun appeared in dative case. In other words, there was a competition between accusative and dative, and dative won.
+The examples in \ref{ex:gothic-acc-nom} and \ref{ex:gothic-nom-acc} have shown that the relative pronoun in headless relatives can take either the internal or the external case. In the examples, the predicates take nominative and accusative, and in both cases, the relative pronoun appeared in accusative case. In other words, there was a competition between nominative and accusative, and accusative won.
 
 In the next section, I discuss the content of this dissertation. Before that, I comment on two notational conventions I use throughout this dissertation. First, I place subscripts on the glosses of the predicates. They indicate what the internal or external case is. The subscript on the predicate in the relative clause indicates the internal case. The subscript on the predicate in the main clause indicates the external case. This subscript can mean different things.
-For \tit{ushafjands} `picking up' \ref{ex:gothic-acc-acc} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{taujau} `do' \ref{ex:gothic-dat-acc} in refers to the case of the indirect object of the predicate. Another possibility is that the subscript is placed on a preposition and refers to the case the preposition combines with, as for \tit{ana} `on' in \ref{ex:gothic-acc-dat}. A last possibility is that the subscript is [\ac{nom}] and refers to the case the descriptive subject appears in, of which examples will emerge in the next chapter.
-In other words, the subscript can refer several elements: a subject, object or indirect object of a predicate. There is no overarching theoretical notion that the subscript makes reference to. The subscript simply indicates which case is required within the (main or relative) clause.
+For \tit{frijon} `to love' in \ref{ex:gothic-acc-nom} the subscript indicates which case the complement of the verb appears in. The subscript on \tit{wisan} `to be' in \ref{ex:gothic-acc-nom} refers to the case the descriptive subject appears in. A subscript can also refer to the case of the indirect object of a predicate, a possibility that arises in the next chapter.
+In other words, the subscript can refer several elements: a subject, direct object or indirect object of a predicate. There is no overarching theoretical notion that the subscript makes reference to. The subscript simply indicates which case is required within the (main or relative) clause.
 
-Second, I write the relative clause in bold. When the relative pronoun takes the internal case, I mark it in bold as well, as shown in \ref{ex:gothic-acc-dat}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothic-dat-acc}.
+Second, I write the relative clause in bold. When the relative pronoun takes the internal case, I mark it in bold as well, as shown in \ref{ex:gothic-acc-nom}. When the relative pronoun takes the external case, I leave it black, indicating it patterns with the main clause. An example of that is \ref{ex:gothic-nom-acc}.
 
 
 \section{The content of this dissertation}
