--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -8,7 +8,7 @@ What I showed as well in the previous chapter is the case scale \tsc{nom < acc <
 In this dissertation I do not work out accounts for these two syntactic phenomena. They merely serve as an illustration that the pattern is reflected in other syntactic phenomena as well.}
 The case scale also appears within morphology in syncretism patterns and formal containment. \pgcitet{pittner1995}{201:fn.4} makes this link to morphology as well: ``Furthermore, the Case hierarchies receive some independent support by morphology as shown by the various inflectional paradigms.''
 
-I am not after a theory in which the case hierarchy is not something construction specific, and syntax and morphology both have their own case hierarchy. I argue that there is a single trigger that is responsible for the case scale in different subparts of language \citep[cf.][on numeral constructions]{caha2019}. Specifically, I show that the observed case scale naturally follows on the assumption that the case hierarchy is deeply anchored in syntax. The case scale in morphology and syntax are merely reflexes of how case is organized in language.\footnote{
+I am not after a theory in which the case hierarchy is something construction specific, and syntax and morphology both have their own case hierarchy. I argue that there is a single trigger that is responsible for the case scale in different subparts of language \citep[cf.][on numeral constructions]{caha2019}. Specifically, I show that the observed case scale naturally follows on the assumption that the case hierarchy is deeply anchored in syntax. The case scale in morphology and syntax are merely reflexes of how case is organized in language.\footnote{
 \citet{himmelreich2017} works this intuition out in a different way.
 }
 
@@ -18,7 +18,7 @@ This chapter is structured as follows. First, I introduce a specific case decomp
 \section{The basic idea}
 
 \citet{caha2009,caha2013} (followed by \citealt[cf.][]{starke2009,bobaljik2012,mcfadden2018,smith2019,vanbaal2018}) has extensively argued that case should be decomposed into privative features. Specifically, the decomposition is cumulative: each case has a different number of case features, and the number grows monotonically.
-This is illustrated in Table \ref{tbl:case-decomposed}. Accusative has all the features that nominative has (here \tsc{f}1) plus one extra (here \tsc{f}2). Dative has all the features accusative has (\tsc{f} and \tsc{f}2) plus one extra (\tsc{f}3).
+This is illustrated in Table \ref{tbl:case-decomposed}. Accusative has all the features that nominative has (here \tsc{f}1) plus one extra (here \tsc{f}2). Dative has all the features accusative has (\tsc{f}1 and \tsc{f}2) plus one extra (\tsc{f}3).
 
 \begin{table}[ht]
   \center
@@ -56,11 +56,11 @@ Case syncretism follows the ordering of the case scale in headless relatives: \a
   \label{tbl:syncretisms-derive}
 \end{table}
 
-The syncretism facts follow in a system in which the case is decomposed as in Table \ref{tbl:case-decomposed} and in which lexicalization that relies on containment. That means that a phonological form is not only inserted if a particular feature specification matches, but also when the features form a subset of the particular feature set.
+The syncretism facts follow in a system in which the case is decomposed as in Table \ref{tbl:case-decomposed} and in which lexicalization relies on containment. This means that a phonological form is not only inserted when the lexical specification is identical to the syntax, but also when the syntactic features are a subset of the lexical specification.
 
 The intuition is the following. Syncretic forms are realized by a single lexical entry from the lexicon. A lexical entry can be applied if it contains all features, as long as there is no more specific one. This system can generate the patterns ABC, AAA, ABB and AAB, but not ABA.
 
-The proposal in this dissertation is worked out in Nanosyntax. I provide background assumptions on the framework whenever necessary to follow the discussion as I proceed. At this point I discuss the general architecture of Nanosyntax, its lexicon, phrasal spellout and matching between syntax and the lexicon.
+I show how the four attested patterns can be derived, specifically the pronouns from Table \ref{tbl:syncretisms-derive}. I do this within Nanosyntax, the framework in which this dissertation is worked out. I provide background assumptions on the framework whenever necessary to follow the discussion as I proceed. At this point, I need to discuss a few points: the general architecture of nanosyntax, its lexicon and phrasal spellout.
 
 The architecture of Nanosyntax is schematically shown in Figure \ref{fig:nano} \citep[from][]{vandenwyngaerd2020,caha2019}. In Nanosyntax, syntax starts with atomic features, and it builds complex syntactic trees. Specifically, there are no `feature bundles' that enter the syntax. The only way complex feature structures come to exist is a a result of merge.
 After syntax (actually, each instance of merge), the syntactic structure is matched against the lexicon for pronunciation. The lexicon `translates' between syntactic representations on the one hand and phonology (PF) and concepts (CF) on the other hand. So, Nanosyntax is a late insertion model: (lexical) insertion takes place late, namely after syntax.
@@ -159,7 +159,7 @@ The lexical entry for \tit{tær} is given in \ref{ex:faroese-taer-lexicon}. The 
 \end{forest}
 \label{ex:faroese-taer-lexicon}
 
-This brings me to the part of the discussion about matching. The lexical trees and their phonological counterparts I gave in \ref{ex:faroese-tu-lexicon} to \ref{ex:faroese-taer-lexicon} are lexical entries. These are matched against the actual syntactic structure that is to be realized.
+This brings me to the part of the discussion about matching between syntax and the lexicon. The lexical trees and their phonological counterparts I gave in \ref{ex:faroese-tu-lexicon} to \ref{ex:faroese-taer-lexicon} are lexical entries. These are matched against the actual syntactic structure that is to be realized.
 Examples of syntactic structures are given in \ref{ex:faroese-tu-spellout} to \ref{ex:faroese-taer-spellout}.
 
 The lexical tree in \ref{ex:faroese-tu-lexicon} matches the syntactic structure in \ref{ex:faroese-tu-spellout}. Therefore, this syntactic structure is spelled out as \tit{tu}. Throughout this dissertation I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it.
@@ -672,7 +672,7 @@ fit to=tree]{};
 ]
 \end{forest}\label{ex:khanty-luw-spellout}
 
-In the previous section I only gave examples in which the forms were syncretic (i.e. formally identical) or suppletive (i.e. formally unrelated). All (pronoiminal and case) features were spelled out by a single lexical entry. The examples from Khanty are different. The accusative pronoun formally contains the nominative pronoun. This can be modeled by letting the \tsc{nom}P contained in the \tsc{acc}P be realized by the same \tsc{nom}P that is spelled out in the nominative. \tsc{f2} has their own realization that builds upon the nominative (and so does \tsc{f3} on top of the accusative).\footnote{
+In the previous section I only gave examples in which the forms were syncretic (i.e. formally identical) or suppletive (i.e. formally unrelated). All (pronoiminal and case) features were spelled out by a single lexical entry. The examples from Khanty are different. The accusative pronoun formally contains the nominative pronoun. This can be modeled by letting the \tsc{nom}P contained in the \tsc{acc}P be realized by the same \tsc{nom}P that is spelled out in the nominative. \tsc{f2} has its own realization that builds upon the nominative (and so does \tsc{f3} on top of the accusative).\footnote{
 Note that it is crucial here to have a theory in which the features that form an accusative contain the features that form a nominative. If not, it would be a surprise that the nominative form is contained in the accusative form. The same holds for the accusative and dative.
 }
 
@@ -723,7 +723,7 @@ This type of movement is different from syntactic movement. It is driven by spel
 }
 For the discussion in this section, only the second type of movement is relevant: complement movement. In this type of movement, the complement or a particular feature moves to the specifier of that same particular feature.
 
-This is exactly the type of movement I described necessary for the Khanty pronoun. The movement is displayed in \ref{ex:khanty-luw-el-movement}. The complement of \tsc{f2}, the \tsc{nom}P, the lower right circled portion in the structure, moves to the specifier of \tsc{acc}P. In its landing position the internal structure of the \tsc{nom}P is no longer shown (taking away the necessity for the circle), and its phonological form is places under the triangle. The strikethrough of the lower \tsc{nom}P indicates that the complement of \tsc{f}2 disappears.
+This is exactly the type of movement I described as necessary for the Khanty pronoun. The movement is displayed in \ref{ex:khanty-luw-el-movement}. The complement of \tsc{f2}, the \tsc{nom}P, the lower right circled portion in the structure, moves to the specifier of \tsc{acc}P. In its landing position the internal structure of the \tsc{nom}P is no longer shown (taking away the necessity for the circle), and its phonological form is places under the triangle. The strikethrough of the lower \tsc{nom}P indicates that the complement of \tsc{f}2 disappears.
 
 \begin{forest} boom
 [\ac{acc}P
