agreement bobaljik af en glossen en uitgeschreven

--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -499,3 +499,11 @@
   publisher = {Cambridge University Press},
   address={Cambridge}
 }
+
+@article{marantz2000,
+  title={Case and licensing},
+  author={Marantz, Alec},
+  journal={Arguments and case: Explaining Burzio’s generalization},
+  pages={11--30},
+  year={2000}
+}
