--- a/introduction.tex
+++ b/introduction.tex
@@ -50,21 +50,20 @@ Even though Modern German also has case competition in headless relatives, I tur
 
 I give an example of a headless relative in Gothic in \ref{ex:gothic-acc-acc}.
 There is no head that this relative clause modifies, because it is a headless relative. This is different from the examples from German I gave above, which each had a head.
-The predicate \tit{arma} `pity' takes accusative objects, as indicated by the subscript on the gloss of the verb. The predicate \tit{gaarma} `pity' also takes accusative objects, indicated again by the subscript.
+The predicate \tit{arman} `to pity' takes accusative objects, as indicated by the subscript on the gloss of the verb. The predicate \tit{gaarman} `to pity' also takes accusative objects, indicated again by the subscript.
 The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{m}' appears in accusative case.\footnote{
 The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Therefore, I refer to the relative pronoun as \tit{þan(a)}.
 }
 
-%put glosses here
 \exg. gaarma þan -ei arma\\
- pity\scsub{[acc]} \ac{rel}.\ac{acc}.\ac{sg}.\ac{m} -\ac{comp} pity\scsub{[acc]}\\
- `I will pity (him) whom I pity' \flushfill{Gothic, \ac{rom} 9:15, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc}
+ pity.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{acc}.\ac{sg}.\ac{m} -\ac{comp} pity.\ac{pres}.1\ac{sg}\scsub{[acc]}\\
+ `I pity him whom I pity' \flushfill{Gothic, \ac{rom} 9:15, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc}
 
-Where does this accusative case come from? Logically speaking, there are two possible sources: the predicate in the main clause \tit{gaarma} `pity', the predicate in the relative clause \tit{arma} `pity' or both predicates. From now on, I use the terms internal and external case to refer to these two possible case sources.
+Where does this accusative case come from? Logically speaking, there are two possible sources: the predicate in the main clause \tit{gaarman} `to pity', the predicate in the relative clause \tit{arman} `to pity' or both predicates. From now on, I use the terms internal and external case to refer to these two possible case sources.
 
-Internal case refers to the case associated with the relative pronoun internal to the relative clause. More precisely, it is the case, which is associated with the grammatical role that the relative pronoun has internal to the relative clause. In \ref{ex:gothic-acc-acc}, the relative pronoun is the descriptive object of \tit{arma} `pity'. The predicate \tit{arma} `pity' takes accusative objects. So, the internal case is accusative.
+Internal case refers to the case associated with the relative pronoun internal to the relative clause. More precisely, it is the case, which is associated with the grammatical role that the relative pronoun has internal to the relative clause. In \ref{ex:gothic-acc-acc}, the relative pronoun is the descriptive object of \tit{arman} `to pity'. The predicate \tit{arman} `to pity' takes accusative objects. So, the internal case is accusative.
 
-External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case which is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothic-acc-acc}, the missing head is the descriptive object of \tit{gaarma} `pity'. The predicate \tit{gaarma} `pity' takes accusative objects. In \ref{ex:gothic-acc-acc}, the external case is accusative.
+External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case which is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothic-acc-acc}, the missing head is the descriptive object of \tit{gaarman} `to pity'. The predicate \tit{gaarman} `to pity' takes accusative objects. In \ref{ex:gothic-acc-acc}, the external case is accusative.
 
 Now I return to the question where \tit{þan(a)} in \ref{ex:gothic-acc-acc} got its case from. In the remainder of this section I show evidence for the claim that the relative pronoun is sensitive to both the internal and the external case.
 This is easy to imagine for the internal case: the internal case reflects the grammatical role of the relative clause. It is a bit more complicated for the external case. The external case is associated with the grammatical role of the missing head in the main clause. The idea is going to be that the external case cannot be reflected on a non-existing head. Indirectly, it appears on the relative pronoun.\footnote{
