--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -254,7 +254,7 @@ Instead, it is the nominative object that agrees with the verb. This is illustra
 In the.winter were.\ac{pl} the.king.\ac{dat} given slaves.\ac{nom}\\
 `In the winter, the king was given (female) slaves.' \flushfill{\pgcitealt{zaenen1985}{112}}\label{ex:icelandic-nom-obj}
 
-The second type of evidence that \citeauthor{bobaljik2006} gives comes from ergative-absolutive languages.
+The second type of evidence that \citeauthor{bobaljik2006} gives comes from ergative-absolutive languages. Ergative-absolutive languages differ in their alignment from nominative-accusative languages. In nominative-accusative languages, the subject of an intransitive verb (S) has the same marking as the subject of a transitive verb (A), namely nominative. The object of a transitive verb (O) has its own marking, namely accusative. This is schematically shown in \ref{fig:nom-acc-lang}.
 
 \begin{figure}[ht]
   \centering
@@ -265,9 +265,11 @@ The second type of evidence that \citeauthor{bobaljik2006} gives comes from erga
 
     \draw[rotate around={45:(0.375,0.5)}] (0.375,0.5) ellipse (0.5 and 1);
   \end{tikzpicture}
-  \caption{}
-  \label{fig:agr-sub-do-io-lang}
+  \caption{Nominative-accusative alignment}
+  \label{fig:nom-acc-lang}
 \end{figure}
+
+In ergative-absolutive languages, the alignment is different. The subject of an intransitive verb (S) has the same marking as the object of the transitive verb (O), namely absolutive. The subject of the transitive verb (A) has its own marking, namely ergative. This is schematically shown in \ref{fig:erg-abs-lang}.
 
 \begin{figure}[ht]
   \centering
@@ -278,23 +280,15 @@ The second type of evidence that \citeauthor{bobaljik2006} gives comes from erga
 
     \draw[rotate around={135:(0.875,0.5)}] (0.875,0.5) ellipse (0.5 and 1);
   \end{tikzpicture}
-  \caption{}
-  \label{fig:agr-sub-do-io-lang}
+  \caption{Ergative-absolutive alignment}
+  \label{fig:erg-abs-lang}
 \end{figure}
 
-In these languages, ergative marks the subject of a transitive clause. Absolutive marks the object of a transitive clause and it marks the subject in an intransitive clause. Now imagine a language that only shows agreement with a single argument.
-If agreement takes place with the grammatical subject, it is expected that the absolutive subject in intrasitive clauses shows agreement and the ergative subject in transitive clauses. This is not what happens,
+Note here that nominative-accusative languages use the same case marking for the same grammatical function (nominative for subject accusative for object), but ergative-absolutive languages do not.
 
+\citet{bobaljik2006} describes how absolutives and ergatives behave with respect to whether they show agreement. There are languages in which there is agreement with both absolutives and ergatives. Besides that, there are languages in which there is only agreement with absolutives. Crucially, there is no language in which there is only agreement with ergatives. Absolutives are a heterogenous set with respect to grammatical function, i.e. they are subjects of intransitive verbs and objects of transitive verbs. However, with respect to showing agreement absolutives behave the same, and this behaviors is different from ergatives. This indicates that it is morphological case and not grammatical function that is the decisive factor.
 
-
-
-If agreement takes place with the grammatical subject, it is expected that the dative subject agrees with the predicate.
-
-
-%look at bobaljik's argument there.
-
-
-Reformulating Figure \ref{fig:agr-sub-do-io} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-nom-acc-dat}. Default case can be nominative or absolutive case (in transitive clauses), and dependent case can be accusative and ergative case.
+\citeauthor{bobaljik2006} (following \citealt{marantz2000}) combines nominative-accusative and ergative-absolutive languages in the following way: accusative and ergative are dependent cases, and nominative or absolutive are unmarked case. Reformulating Figure \ref{fig:agr-sub-do-io} in terms of case instead of grammatical function gives the schema in Figure \ref{fig:agr-nom-acc-dat}.
 
 \begin{figure}[H]
   \centering
@@ -303,7 +297,7 @@ Reformulating Figure \ref{fig:agr-sub-do-io} in terms of case instead of grammat
     \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
     \draw [fill opacity=0.4, fill=DG] (0,0) circle (1.25);
 
-    \node[] at (0,2.75) {default case};
+    \node[] at (0,2.75) {unmarked case};
     \node[] at (0,1.5) {dependent case};
     \node[] at (0,0) {dative};
 
@@ -317,12 +311,12 @@ Reformulating Figure \ref{fig:agr-sub-do-io} in terms of case instead of grammat
 \end{figure}
 
 This formulation in terms of case rather than grammatical function works as follows for the examples I gave earlier.
-First, Japanese is a language that does not show any agreement, as shown in \ref{ex:japanese-agr}. There is no agreement with the default case (here the nominative), not with the dependent case (here the accusative) and not with the dative case.
-Second, German is a language that shows agreement only with the default case, as shown in \ref{ex:german-agr}. The morpheme \tit{-st} on the predicate agrees with the element in default nominative case \tit{du} `you'. There is no agreement with the dependent accusative case or with the dative case.
+First, Japanese is a language that does not show any agreement, as shown in \ref{ex:japanese-agr}. There is no agreement with the unmarked case (here the nominative), not with the dependent case (here the accusative) and not with the dative case.
+Second, German is a language that shows agreement only with the unmarked case, as shown in \ref{ex:german-agr}. The morpheme \tit{-st} on the predicate agrees with the element in default nominative case \tit{du} `you'. There is no agreement with the dependent accusative case or with the dative case.
 Third, Hungarian is a language that shows agreement with the default and the dependent case, as shown in \ref{ex:hungarian-agr}. The portmanteau morpheme \tit{-om} on the predicates agrees with the element in default nominative case \tit{én} `I' and the element in dependent accusative case \tit{a könyvet} `the book'.
-Last, Basque is a language that shows agreement with the default, the dependent and the dative case, as shown in \ref{ex:basque-agr}. The morpheme \tit{-zu} on the auxiliary agrees with the element in default ergative case \tit{zuk} `you'. The morpheme \tit{d-} on the auxiliary agrees with the element in dependent absolutive case \tit{liburua} `the book'. The morpheme \tit{-ta} on the auxiliary agrees with the element in dative case \tit{niri} `me'.
+Last, Basque is a language that shows agreement with the default, the dependent and the dative case, as shown in \ref{ex:basque-agr}. The morpheme \tit{-zu} on the auxiliary agrees with the element in dependent ergative case \tit{zuk} `you'. The morpheme \tit{d-} on the auxiliary agrees with the element in default absolutive case \tit{liburua} `the book'. The morpheme \tit{-ta} on the auxiliary agrees with the element in dative case \tit{niri} `me'.
 
-In the languages I discuss in this dissertation, I focus on languages that have nominative as default case and accusative as dependent case, so Figure \ref{fig:agr-nom-acc-dat} suffices.
+In the languages I discuss in this dissertation, I focus on languages that have nominative as unmarked case and accusative as dependent case, so Figure \ref{fig:agr-nom-acc-dat} suffices.
 
 \begin{figure}[ht]
   \centering
@@ -474,7 +468,7 @@ In \ref{ex:basque-io}, the dative indirect object \tit{emakumeari} `the woman' f
     \draw [fill opacity=0.4, fill=LG] (0,0.5) circle (1.75);
     \draw [fill opacity=0.4, fill=DG] (0,0) circle (1.25);
 
-    \node[] at (0,2.75) {default case};
+    \node[] at (0,2.75) {unmarked case};
     \node[] at (0,1.5) {dependent case};
     \node[align=center] at (0,0) {dative};
 
